helm/temp-identity-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: identity-provider.mifos.io
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: identity-provider.mifos.io
      http:
        paths:
        - backend:
            serviceName: identity-provider
            servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: identity-provider
  name: identity-provider
  namespace: default
spec:
  ports:
    - name: port
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: identity-provider
  sessionAffinity: None
  type: ClusterIP
